--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 			"app/database/seeds",
 			"app/tests/TestCase.php"
 		],"psr-4":{
-			"Isoform\\":"App/Isoform"
+			"Isoform\\":"app/Isoform"
 		}
 	},
 	"scripts": {
