--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
 	"require": {
 		"laravel/framework": "4.2.*"
 		,"ua-parser/uap-php": "dev-master"
-		,"passioncoder/simplecurl": "dev-master",
-		"guzzlehttp/guzzle": "~5.2"
+		,"passioncoder/simplecurl": "dev-master"
+		,"guzzlehttp/guzzle": "~5.2"
+		,"sairiz/mandrill": "dev-master"
 	},"require-dev": {
 	    "way/generators": "~2.0"
 	    ,"phpunit/phpunit":"4.0.*@dev"
